[package]
name = "groundkart_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
r2d2 = "0.8.10"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
